# qbr

./: .gitignore  CMakeLists.txt  Makefile  NEWS.md  QBR.pro  QBR_en_US.ts  README.md  TODO.ru.md  aboutdialog.cpp  aboutdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  qbr.desktop  qbr.pro  qbrcommon.h  qbrformat.cpp  qbrformat.h  qbrmainwindow.cpp  qbrmainwindow.h  qbrmainwindow.ui  qbrtemplate.cpp  qbrtemplate.h  qbrwebenginepage.cpp  qbrwebenginepage.h  qbrzip.cpp  qbrzip.h
cmake/: GenerateVersion.cmake  Packing.cmake
debian/: changelog  control  copyright  qbr.docs
debian/source/: options
format/: qbrformatamb.cpp  qbrformatamb.h  qbrformatcbz.cpp  qbrformatcbz.h  qbrformatfb2.cpp  qbrformatfb2.h  qbrformatfb3.cpp  qbrformatfb3.h
icons-src/main/: icon-src.ai  icon-src.eps  make.sh
icons-src/theme/: gen.sh
package/deb/: run_build.sh  run_ppa_upload.sh
package/deb/dockerfiles/: qbr-build-bookworm.Dockerfile  qbr-build-jammy.Dockerfile  qbr-build-noble.Dockerfile  qbr-build-plucky.Dockerfile  qbr-build-trixie.Dockerfile
package/deb/helpers/: build.sh
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bookloader.cpp  bookloader.h  booksaver.cpp  booksaver.h  fileinfodialog.cpp  fileinfodialog.h  fileinfodialog.ui  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qbr.qrc  qbraboutdialog.cpp  qbraboutdialog.h  qbraboutdialog.ui  qbrbookloader.cpp  qbrbookloader.h  qbrcfg.cpp  qbrcfg.h  qbrcommon.cpp  qbrfileinfodialog.cpp  qbrfileinfodialog.h  qbrfileinfodialog.ui  qbrfinddialog.cpp  qbrfinddialog.h  qbrfinddialog.ui  qbrformat.cpp  qbrmainwindow.cpp  qbrmainwindow.h  qbrmainwindow.ui  qbrsettingsdialog.cpp  qbrsettingsdialog.h  qbrsettingsdialog.ui  qbrtemplate.cpp  (+14 more)
src/export/: export.cpp  export.h  exportepub.cpp  exportepub.h  exporthtml.cpp  exporthtml.h  exportmarkdown.cpp  exportmarkdown.h  exporttext.cpp  exporttext.h
src/format/: format.cpp  format.h  formatamb.cpp  formatamb.h  formatcbz.cpp  formatcbz.h  formatepub.cpp  formatepub.h  formatfb2.cpp  formatfb2.h  formatfb2zip.cpp  formatfb2zip.h  formatfb3.cpp  formatfb3.h  qbrformat.cpp  qbrformat.h  qbrformatamb.cpp  qbrformatamb.h  qbrformatcbz.cpp  qbrformatcbz.h  qbrformatfb2.cpp  qbrformatfb2.h  qbrformatfb2zip.cpp  qbrformatfb2zip.h  qbrformatfb3.cpp  qbrformatfb3.h
src/languages/: qbr_en.qm  qbr_en.ts  qbr_ru.qm  qbr_ru.ts
src/libs/: helpers.cpp  helpers.h  qbrbookinfo.cpp  qbrbookinfo.h  qbrunzip.cpp  qbrunzip.h  qbrzip.cpp  qbrzip.h  settings.cpp  settings.h
src/res/: default_fb2.xml  default_ru_fb2.xml  style.css
